Style: black theme styled

--- a/index.html
+++ b/index.html
@@ -7,32 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="numberBox">
-            <p class="result"></p>
-    </div>
-    <div class="container">
-        <button class="numbers">1</button>
-        <button class="numbers">2</button>
-        <button class="numbers">3</button>
-
-        <button class="operators">+</button>
-        <button class="numbers">4</button>
-        <button class="numbers">5</button>
-        <button class="numbers">6</button>
-        <button class="operators">-</button>
-        <button class="numbers">7</button>
-        <button class="numbers">8</button>
-        <button class="numbers">9</button>
-        <button class="operators">X</button>
-
-
-        <button class="equals">=</button>
-        <button class="numbers">0</button>
-        <button class="AC">AC</button>
-
-
-        <button class="operators">%</button>
-
+    <div class="body-container">
+        <div class="numberBox">
+                <p class="result"></p>
+        </div>
+        <div class="container">
+            <button class="numbers">1</button>
+            <button class="numbers">2</button>
+            <button class="numbers">3</button>
+            <button class="operators">+</button>
+            <button class="numbers">4</button>
+            <button class="numbers">5</button>
+            <button class="numbers">6</button>
+            <button class="operators">-</button>
+            <button class="numbers">7</button>
+            <button class="numbers">8</button>
+            <button class="numbers">9</button>
+            <button class="operators">X</button>
+            <button class="equals">=</button>
+            <button class="numbers">0</button>
+            <button class="AC">AC</button>
+            <button class="operators">%</button>
+        </div>
     </div>
 
     <audio src="./asset/soft-notice-146623.mp3"></audio>
